[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edit-trick"
version = "0.1.0"
description = "Demonstrates the edit trick with LLMs for more efficient document processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.7.0",
    "typer[all]>=0.9.0",
    "rich>=13.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
]

[project.scripts]
edit-trick = "edit_trick.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/edit_trick"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88